{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 203,
  "lineage": "141bccdf-056e-6b68-668f-b0a0f794507e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0040f5c775d609024",
            "arn": "arn:aws:ec2:eu-central-1:637423458709:elastic-ip/eipalloc-0040f5c775d609024",
            "association_id": "eipassoc-0e1daf2bcb0f380ab",
            "domain": "vpc",
            "id": "eipalloc-0040f5c775d609024",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0af0fa9c7c6605372",
            "private_dns": "ip-10-0-0-146.eu-central-1.compute.internal",
            "private_ip": "10.0.0.146",
            "public_dns": "ec2-3-122-14-123.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.122.14.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-workshop-private_ingress-nat-gateway-eip-0"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-private_ingress-nat-gateway-eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0475221eeea0f91bb",
            "arn": "arn:aws:ec2:eu-central-1:637423458709:elastic-ip/eipalloc-0475221eeea0f91bb",
            "association_id": "eipassoc-0be7ed7b710a6fe00",
            "domain": "vpc",
            "id": "eipalloc-0475221eeea0f91bb",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-07ffd928508c00847",
            "private_dns": "ip-10-0-1-84.eu-central-1.compute.internal",
            "private_ip": "10.0.1.84",
            "public_dns": "ec2-18-196-118-190.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.196.118.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-workshop-private_ingress-nat-gateway-eip-1"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-private_ingress-nat-gateway-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "staging_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0de02246788e4a354",
            "arn": "arn:aws:ec2:eu-central-1:637423458709:instance/i-036456596f89290ad",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "app-profile",
            "id": "i-036456596f89290ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a380b467a34dbd2d",
            "private_dns": "ip-10-0-4-179.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-central-1:637423458709:key/274d7292-1710-4ec4-a91e-70a57a50eb5b",
                "tags_all": {
                  "Management": "Terraform"
                },
                "throughput": 125,
                "volume_id": "vol-0a4798090a698e691",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047f143745196f11b",
            "tags": {
              "Name": "terraform-workshop-staging_app-eu-central-1a"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-staging_app-eu-central-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0bb112e97b6b28206"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_cloudfront_cache_policy.default",
            "aws_cloudfront_distribution.mission_app",
            "aws_db_instance.wp_mysql",
            "aws_db_subnet_group.mission_db_group",
            "aws_efs_file_system.mission_app",
            "aws_iam_instance_profile.app",
            "aws_iam_role.app",
            "aws_lb.mission_app",
            "aws_s3_bucket.mission_app",
            "aws_s3_object.mission_app-private_key",
            "aws_s3_object.mission_app-public_key",
            "aws_secretsmanager_secret.db",
            "aws_secretsmanager_secret_version.db",
            "aws_security_group.app",
            "aws_security_group.db",
            "aws_subnet.private",
            "aws_subnet.private_ingress",
            "aws_vpc.default",
            "data.aws_ami.linux",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy.database",
            "data.aws_iam_policy.ssm_managed",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_region.current",
            "random_password.default",
            "tls_private_key.mission_app",
            "tls_self_signed_cert.mission_app"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:internet-gateway/igw-0a4b1a87466cf12d4",
            "id": "igw-0a4b1a87466cf12d4",
            "owner_id": "637423458709",
            "tags": {
              "Name": "terraform-workshop-internet-gateway"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-internet-gateway"
            },
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mission_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:loadbalancer/app/terraform-workshop-alb/220fc608a432dddb",
            "arn_suffix": "app/terraform-workshop-alb/220fc608a432dddb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-workshop-alb-834209773.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:loadbalancer/app/terraform-workshop-alb/220fc608a432dddb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-workshop-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bb112e97b6b28206"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0941982dfe87fbf71"
              },
              {
                "subnet_id": "subnet-0a128874622395913"
              }
            ],
            "subnets": [
              "subnet-0941982dfe87fbf71",
              "subnet-0a128874622395913"
            ],
            "tags": {
              "Name": "terraform-workshop-lb"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-lb"
            },
            "vpc_id": "vpc-04d21dd89638a47fb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mission_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:listener/app/terraform-workshop-alb/220fc608a432dddb/49f8730a0e875370",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:targetgroup/terraform-workshop-lb-tg/a796518012c6df60",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:listener/app/terraform-workshop-alb/220fc608a432dddb/49f8730a0e875370",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:loadbalancer/app/terraform-workshop-alb/220fc608a432dddb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Management": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mission_app",
            "aws_lb_target_group.mission_app",
            "aws_security_group.app",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mission_app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:listener/app/terraform-workshop-alb/220fc608a432dddb/8c8efc8d218e5df3",
            "certificate_arn": "arn:aws:acm:eu-central-1:637423458709:certificate/0ac3aa2d-be14-4364-a4af-b2d219e63d23",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:targetgroup/terraform-workshop-lb-tg/a796518012c6df60",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:listener/app/terraform-workshop-alb/220fc608a432dddb/8c8efc8d218e5df3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:loadbalancer/app/terraform-workshop-alb/220fc608a432dddb",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "Management": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.mission_app_private",
            "aws_lb.mission_app",
            "aws_lb_target_group.mission_app",
            "aws_security_group.app",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.available",
            "tls_private_key.mission_app",
            "tls_self_signed_cert.mission_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "redirect_cloudfront_to_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:targetgroup/terraform-workshop-lb-tg/a796518012c6df60",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:listener-rule/app/terraform-workshop-alb/220fc608a432dddb/49f8730a0e875370/3e9e8ab694c17340",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-Request",
                    "values": [
                      "terraform-workshop-alb-834209773.eu-central-1.elb.amazonaws.com"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:listener-rule/app/terraform-workshop-alb/220fc608a432dddb/49f8730a0e875370/3e9e8ab694c17340",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:listener/app/terraform-workshop-alb/220fc608a432dddb/49f8730a0e875370",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Management": "Terraform"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mission_app",
            "aws_lb_listener.mission_app_http",
            "aws_lb_target_group.mission_app",
            "aws_security_group.app",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "redirect_http_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:listener-rule/app/terraform-workshop-alb/220fc608a432dddb/49f8730a0e875370/09dcb9cba8ddf6d4",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "terraform-workshop-alb-834209773.eu-central-1.elb.amazonaws.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:listener-rule/app/terraform-workshop-alb/220fc608a432dddb/49f8730a0e875370/09dcb9cba8ddf6d4",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:listener/app/terraform-workshop-alb/220fc608a432dddb/49f8730a0e875370",
            "priority": 200,
            "tags": {},
            "tags_all": {
              "Management": "Terraform"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mission_app",
            "aws_lb_listener.mission_app_http",
            "aws_lb_target_group.mission_app",
            "aws_security_group.app",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mission_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:targetgroup/terraform-workshop-lb-tg/a796518012c6df60",
            "arn_suffix": "targetgroup/terraform-workshop-lb-tg/a796518012c6df60",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "443",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423458709:targetgroup/terraform-workshop-lb-tg/a796518012c6df60",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:637423458709:loadbalancer/app/terraform-workshop-alb/220fc608a432dddb"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-workshop-lb-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 1800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Management": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078194fbec1c4d4e9",
            "original_route_table_id": "rtb-04171f17e4268165f",
            "route_table_id": "rtb-0017052a9d689be9f",
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0040f5c775d609024",
            "association_id": "eipassoc-0e1daf2bcb0f380ab",
            "connectivity_type": "public",
            "id": "nat-0bb995587dcabe6da",
            "network_interface_id": "eni-0af0fa9c7c6605372",
            "private_ip": "10.0.0.146",
            "public_ip": "3.122.14.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0724ad41e5dc59828",
            "tags": {
              "Name": "terraform-workshop-private_ingress-nat-gateway-0"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-private_ingress-nat-gateway-0"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.default",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0475221eeea0f91bb",
            "association_id": "eipassoc-0be7ed7b710a6fe00",
            "connectivity_type": "public",
            "id": "nat-0c6706625ab1da63b",
            "network_interface_id": "eni-07ffd928508c00847",
            "private_ip": "10.0.1.84",
            "public_ip": "18.196.118.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04b724b0af76de53d",
            "tags": {
              "Name": "terraform-workshop-private_ingress-nat-gateway-1"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-private_ingress-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.default",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:route-table/rtb-00e90314996379b3b",
            "id": "rtb-00e90314996379b3b",
            "owner_id": "637423458709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bb995587dcabe6da",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-workshop-route-table-private-ingress-0"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-route-table-private-ingress-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.default",
            "aws_nat_gateway.default",
            "aws_subnet.private_ingress",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:route-table/rtb-0b1e04971e3679851",
            "id": "rtb-0b1e04971e3679851",
            "owner_id": "637423458709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c6706625ab1da63b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-workshop-route-table-private-ingress-1"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-route-table-private-ingress-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.default",
            "aws_nat_gateway.default",
            "aws_subnet.private_ingress",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:route-table/rtb-0017052a9d689be9f",
            "id": "rtb-0017052a9d689be9f",
            "owner_id": "637423458709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4b1a87466cf12d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-workshop-route-table-public"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3ef060b2440ecc3",
            "route_table_id": "rtb-00e90314996379b3b",
            "subnet_id": "subnet-047f143745196f11b"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.default",
            "aws_nat_gateway.default",
            "aws_route_table.private_ingress",
            "aws_subnet.private_ingress",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7d4627ac9c5f663",
            "route_table_id": "rtb-0b1e04971e3679851",
            "subnet_id": "subnet-0d72ac342fedc0283"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.default",
            "aws_nat_gateway.default",
            "aws_route_table.private_ingress",
            "aws_subnet.private_ingress",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045d72027d8b23ea5",
            "route_table_id": "rtb-0017052a9d689be9f",
            "subnet_id": "subnet-0724ad41e5dc59828"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e148569623726dab",
            "route_table_id": "rtb-0017052a9d689be9f",
            "subnet_id": "subnet-04b724b0af76de53d"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "any",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:security-group/sg-0aff323b0fa0bc431",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aff323b0fa0bc431",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any incoming traffic ",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-workshop-any-20240821180418382200000007",
            "name_prefix": "terraform-workshop-any-",
            "owner_id": "637423458709",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Management": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:security-group/sg-0bb112e97b6b28206",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb112e97b6b28206",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from any IP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from any IP",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-workshop-app-20240821180418382200000006",
            "name_prefix": "terraform-workshop-app-",
            "owner_id": "637423458709",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Management": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:security-group/sg-08733b031ca5e5d37",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08733b031ca5e5d37",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.5.0/24"
                ],
                "description": "Allow incoming traffic for MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-workshop-db-2024082118042117290000000b",
            "name_prefix": "terraform-workshop-db-",
            "owner_id": "637423458709",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Management": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.private_ingress",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:security-group/sg-00177e6545efeed04",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00177e6545efeed04",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.5.0/24"
                ],
                "description": "Allow any NFS traffic from private subnets",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-workshop-nfs-2024082118042117220000000a",
            "name_prefix": "terraform-workshop-nfs-",
            "owner_id": "637423458709",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Management": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.private_ingress",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:subnet/subnet-0a128874622395913",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a128874622395913",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423458709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-workshop-subnet-private-0"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-subnet-private-0"
            },
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:subnet/subnet-0941982dfe87fbf71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0941982dfe87fbf71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423458709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-workshop-subnet-private-1"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-subnet-private-1"
            },
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:subnet/subnet-047f143745196f11b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047f143745196f11b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423458709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-workshop-subnet-private_ingress-0"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-subnet-private_ingress-0"
            },
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:subnet/subnet-0d72ac342fedc0283",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d72ac342fedc0283",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423458709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-workshop-subnet-private_ingress-1"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-subnet-private_ingress-1"
            },
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:subnet/subnet-0724ad41e5dc59828",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0724ad41e5dc59828",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423458709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-workshop-subnet-public-0"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-subnet-public-0"
            },
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:subnet/subnet-04b724b0af76de53d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b724b0af76de53d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423458709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-workshop-subnet-public-1"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-subnet-public-1"
            },
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:vpc/vpc-04d21dd89638a47fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004f5004174787e99",
            "default_route_table_id": "rtb-0017052a9d689be9f",
            "default_security_group_id": "sg-0b7236ec64b2f4470",
            "dhcp_options_id": "dopt-0ecd9b59351a8c8fe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d21dd89638a47fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0017052a9d689be9f",
            "owner_id": "637423458709",
            "tags": {
              "Name": "terraform-workshop-vpc"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-vpc"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:vpc-endpoint/vpce-0ae023631602b2ebf",
            "cidr_blocks": [
              "52.219.44.0/22",
              "52.219.208.0/22",
              "3.5.136.0/22",
              "52.219.218.0/24",
              "52.219.140.0/24",
              "16.12.32.0/22",
              "52.219.72.0/22",
              "3.5.134.0/23",
              "16.12.24.0/21",
              "52.219.168.0/22"
            ],
            "id": "vpce-0ae023631602b2ebf",
            "owner_id": "637423458709",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.eu-central-1.s3",
            "state": "available",
            "tags": {
              "Name": "terraform-workshop-endpoint-s3"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-endpoint-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:vpc-endpoint/vpce-03cba5f98d8247626",
            "dns_entry": [
              {
                "dns_name": "vpce-03cba5f98d8247626-syrccreh.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-03cba5f98d8247626-syrccreh-eu-central-1a.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-03cba5f98d8247626-syrccreh-eu-central-1b.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2messages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z07084153TWBG3CUUWMLR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03cba5f98d8247626",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03314d867325b7874",
              "eni-0d6d1d882c109e487"
            ],
            "owner_id": "637423458709",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aff323b0fa0bc431"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2messages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.4.170",
                "subnet_id": "subnet-047f143745196f11b"
              },
              {
                "ipv4": "10.0.5.129",
                "subnet_id": "subnet-0d72ac342fedc0283"
              }
            ],
            "subnet_ids": [
              "subnet-047f143745196f11b",
              "subnet-0d72ac342fedc0283"
            ],
            "tags": {
              "Name": "terraform-workshop-endpoint-ec2messages"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-endpoint-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_security_group.any",
            "aws_subnet.private_ingress",
            "aws_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "secretsmanager",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:vpc-endpoint/vpce-0d3216db10f876af7",
            "dns_entry": [
              {
                "dns_name": "vpce-0d3216db10f876af7-lej1ow04.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0d3216db10f876af7-lej1ow04-eu-central-1a.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0d3216db10f876af7-lej1ow04-eu-central-1b.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "secretsmanager.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z04861242L23R2JC9E6OM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d3216db10f876af7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07beaa60221266188",
              "eni-0fb95949090d791ef"
            ],
            "owner_id": "637423458709",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aff323b0fa0bc431"
            ],
            "service_name": "com.amazonaws.eu-central-1.secretsmanager",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.4.247",
                "subnet_id": "subnet-047f143745196f11b"
              },
              {
                "ipv4": "10.0.5.146",
                "subnet_id": "subnet-0d72ac342fedc0283"
              }
            ],
            "subnet_ids": [
              "subnet-047f143745196f11b",
              "subnet-0d72ac342fedc0283"
            ],
            "tags": {
              "Name": "terraform-workshop-endpoint-secretsmanager"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-endpoint-secretsmanager"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_security_group.any",
            "aws_subnet.private_ingress",
            "aws_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:vpc-endpoint/vpce-00f6c7255dea8825a",
            "dns_entry": [
              {
                "dns_name": "vpce-00f6c7255dea8825a-z96w6dtu.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-00f6c7255dea8825a-z96w6dtu-eu-central-1a.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-00f6c7255dea8825a-z96w6dtu-eu-central-1b.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssm.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z04874051BT00U17E0VYN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00f6c7255dea8825a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-027e07f8de8b69afa",
              "eni-090154c777a142d24"
            ],
            "owner_id": "637423458709",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aff323b0fa0bc431"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.4.137",
                "subnet_id": "subnet-047f143745196f11b"
              },
              {
                "ipv4": "10.0.5.155",
                "subnet_id": "subnet-0d72ac342fedc0283"
              }
            ],
            "subnet_ids": [
              "subnet-047f143745196f11b",
              "subnet-0d72ac342fedc0283"
            ],
            "tags": {
              "Name": "terraform-workshop-endpoint-ssm"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-endpoint-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_security_group.any",
            "aws_subnet.private_ingress",
            "aws_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423458709:vpc-endpoint/vpce-07cd558fb5e2c0f83",
            "dns_entry": [
              {
                "dns_name": "vpce-07cd558fb5e2c0f83-7vdb6jcu.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-07cd558fb5e2c0f83-7vdb6jcu-eu-central-1b.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-07cd558fb5e2c0f83-7vdb6jcu-eu-central-1a.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssmmessages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z07173722IKXJEXHC7ZYZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07cd558fb5e2c0f83",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00b5a7b611b8acfa3",
              "eni-0499d5ce102e97f8c"
            ],
            "owner_id": "637423458709",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aff323b0fa0bc431"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssmmessages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.4.149",
                "subnet_id": "subnet-047f143745196f11b"
              },
              {
                "ipv4": "10.0.5.31",
                "subnet_id": "subnet-0d72ac342fedc0283"
              }
            ],
            "subnet_ids": [
              "subnet-047f143745196f11b",
              "subnet-0d72ac342fedc0283"
            ],
            "tags": {
              "Name": "terraform-workshop-endpoint-ssmmessages"
            },
            "tags_all": {
              "Management": "Terraform",
              "Name": "terraform-workshop-endpoint-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04d21dd89638a47fb"
          },
          "dependencies": [
            "aws_security_group.any",
            "aws_subnet.private_ingress",
            "aws_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}